# mopyrust

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
packaging/aur/mopyrust-bin/: PKGBUILD
packaging/aur/mopyrust-git/: PKGBUILD  mopyrust.desktop
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  lyrics.rs  main.rs  models.rs  mopidy_client.rs  mpd_worker.rs  mpris.rs  visualizer.rs
src-tauri/src/metadata/: cache.rs  mod.rs  musicbrainz.rs  wikipedia.rs
src/components/: AlbumCard.svelte  AlbumDetail.svelte  Albums.svelte  ArtistDetail.svelte  Artists.svelte  BackendBadge.svelte  Browse.svelte  ContextMenu.svelte  Cover.svelte  History.svelte  Icon.svelte  MiniPlayer.svelte  NowPlaying.svelte  PlaylistDetail.svelte  Playlists.svelte  Queue.svelte  Search.svelte  Settings.svelte  Sidebar.svelte  TrackRow.svelte  Visualizer.svelte
src/lib/: api.ts  format.ts  lrc.ts  store.svelte.ts  types.ts
src/styles/: global.css  theme.css
