[package]
name = "mopyrust"
version = "0.1.0"
edition = "2024"

[lib]
name = "mopyrust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "hickory-dns"] }
base64 = "0.22"
souvlaki = "0.8"
# Visualizer: WS feed from mopidy-goodies + client-side FFT.
tokio-tungstenite = "0.24"
futures-util = "0.3"
rustfft = "6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
